---
source: minijinja/tests/test_templates.rs
description: "{%- from \"call_macro.txt\" import call %}\n{%- macro my_macro(value) %}[{{ value }}]{% endmacro %}\nnothing should show: {% do call(my_macro, 42) %}"
info: {}
input_file: minijinja/tests/inputs/do_macro_calling_macro.txt
---

nothing should show: 

